# SMILD

./: CITATION.cff  README.md  RELEASE_NOTES_v0.1.0.md  pyproject.toml
docs/: SMDI_KnowledgeBase_Theory_Methods.docx
poc/: NOTES_equations.md  smild_experiment.py  smild_poc.py  smild_results.csv
smild/: __init__.py  forward.py  smild.py  twin.py
tests/: test_smild_poc.py
